// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AsJsonString 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="w-json-view-container w-rjv pr-5 w-rjv-inner"
      style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
    >
      <span
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="w-rjv-arrow"
          style="transform: rotate(0deg); transition: all 0.3s;"
        >
          <svg
            fill="var(--w-rjv-arrow-color, currentColor)"
            style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="w-rjv-curlybraces-start"
        >
          {
        </span>
        <span
          class="w-rjv-object-size"
          style="padding-left: 8px; font-style: italic;"
        >
          2 items
        </span>
      </span>
      <div
        class="w-rjv-wrap"
        style="padding-left: 15px; margin-left: 6px;"
      >
        <div
          class="w-rjv-inner"
        >
          <span
            style="display: inline-flex; align-items: center;"
          >
            <span
              class="w-rjv-arrow"
              style="transform: rotate(0deg); transition: all 0.3s;"
            >
              <svg
                fill="var(--w-rjv-arrow-color, currentColor)"
                style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span>
              <span
                class="w-rjv-quotes"
                data-placement="left"
              >
                "
              </span>
              <span
                class="w-rjv-object-key"
              >
                aList
              </span>
              <span
                class="w-rjv-quotes"
                data-placement="right"
              >
                "
              </span>
            </span>
            <span
              class="w-rjv-colon"
              style="margin-left: 0px; margin-right: 2px;"
            >
              :
            </span>
            <span
              class="w-rjv-brackets-start"
            >
              [
            </span>
            <span
              class="w-rjv-object-size"
              style="padding-left: 8px; font-style: italic;"
            >
              3 items
            </span>
          </span>
          <div
            class="w-rjv-wrap"
            style="padding-left: 15px; margin-left: 6px;"
          >
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  0
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                1
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  1
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                2
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  2
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                3
              </span>
            </div>
          </div>
          <div
            style="padding-left: 4px;"
          >
            <span
              class="w-rjv-brackets-end"
            >
              ]
            </span>
          </div>
        </div>
        <div
          class="w-rjv-inner"
        >
          <span
            style="display: inline-flex; align-items: center;"
          >
            <span
              class="w-rjv-arrow"
              style="transform: rotate(0deg); transition: all 0.3s;"
            >
              <svg
                fill="var(--w-rjv-arrow-color, currentColor)"
                style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span>
              <span
                class="w-rjv-quotes"
                data-placement="left"
              >
                "
              </span>
              <span
                class="w-rjv-object-key"
              >
                anObject
              </span>
              <span
                class="w-rjv-quotes"
                data-placement="right"
              >
                "
              </span>
            </span>
            <span
              class="w-rjv-colon"
              style="margin-left: 0px; margin-right: 2px;"
            >
              :
            </span>
            <span
              class="w-rjv-curlybraces-start"
            >
              {
            </span>
            <span
              class="w-rjv-object-size"
              style="padding-left: 8px; font-style: italic;"
            >
              4 items
            </span>
          </span>
          <div
            class="w-rjv-wrap"
            style="padding-left: 15px; margin-left: 6px;"
          >
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  bool
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="bool"
              >
                true
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  number
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                123
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  null
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  string
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-quotes"
              >
                "
              </span>
              <span
                class="w-rjv-value"
                data-type="string"
                style="cursor: initial;"
              >
                a string
              </span>
              <span
                class="w-rjv-quotes"
              >
                "
              </span>
            </div>
          </div>
          <div
            style="padding-left: 4px;"
          >
            <span
              class="w-rjv-curlybraces-end"
            >
              }
            </span>
          </div>
        </div>
      </div>
      <div
        style="padding-left: 4px;"
      >
        <span
          class="w-rjv-curlybraces-end"
        >
          }
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AsObject 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="w-json-view-container w-rjv pr-5 w-rjv-inner"
      style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
    >
      <span
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="w-rjv-arrow"
          style="transform: rotate(0deg); transition: all 0.3s;"
        >
          <svg
            fill="var(--w-rjv-arrow-color, currentColor)"
            style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="w-rjv-curlybraces-start"
        >
          {
        </span>
        <span
          class="w-rjv-object-size"
          style="padding-left: 8px; font-style: italic;"
        >
          2 items
        </span>
      </span>
      <div
        class="w-rjv-wrap"
        style="padding-left: 15px; margin-left: 6px;"
      >
        <div
          class="w-rjv-inner"
        >
          <span
            style="display: inline-flex; align-items: center;"
          >
            <span
              class="w-rjv-arrow"
              style="transform: rotate(0deg); transition: all 0.3s;"
            >
              <svg
                fill="var(--w-rjv-arrow-color, currentColor)"
                style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span>
              <span
                class="w-rjv-quotes"
                data-placement="left"
              >
                "
              </span>
              <span
                class="w-rjv-object-key"
              >
                aList
              </span>
              <span
                class="w-rjv-quotes"
                data-placement="right"
              >
                "
              </span>
            </span>
            <span
              class="w-rjv-colon"
              style="margin-left: 0px; margin-right: 2px;"
            >
              :
            </span>
            <span
              class="w-rjv-brackets-start"
            >
              [
            </span>
            <span
              class="w-rjv-object-size"
              style="padding-left: 8px; font-style: italic;"
            >
              3 items
            </span>
          </span>
          <div
            class="w-rjv-wrap"
            style="padding-left: 15px; margin-left: 6px;"
          >
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  0
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                1
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  1
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                2
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-object-key"
                >
                  2
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                3
              </span>
            </div>
          </div>
          <div
            style="padding-left: 4px;"
          >
            <span
              class="w-rjv-brackets-end"
            >
              ]
            </span>
          </div>
        </div>
        <div
          class="w-rjv-inner"
        >
          <span
            style="display: inline-flex; align-items: center;"
          >
            <span
              class="w-rjv-arrow"
              style="transform: rotate(0deg); transition: all 0.3s;"
            >
              <svg
                fill="var(--w-rjv-arrow-color, currentColor)"
                style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span>
              <span
                class="w-rjv-quotes"
                data-placement="left"
              >
                "
              </span>
              <span
                class="w-rjv-object-key"
              >
                anObject
              </span>
              <span
                class="w-rjv-quotes"
                data-placement="right"
              >
                "
              </span>
            </span>
            <span
              class="w-rjv-colon"
              style="margin-left: 0px; margin-right: 2px;"
            >
              :
            </span>
            <span
              class="w-rjv-curlybraces-start"
            >
              {
            </span>
            <span
              class="w-rjv-object-size"
              style="padding-left: 8px; font-style: italic;"
            >
              4 items
            </span>
          </span>
          <div
            class="w-rjv-wrap"
            style="padding-left: 15px; margin-left: 6px;"
          >
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  bool
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="bool"
              >
                true
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  number
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-value"
                data-type="int"
              >
                123
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  null
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
            </div>
            <div
              class="w-rjv-line"
            >
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                >
                  string
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-quotes"
              >
                "
              </span>
              <span
                class="w-rjv-value"
                data-type="string"
                style="cursor: initial;"
              >
                a string
              </span>
              <span
                class="w-rjv-quotes"
              >
                "
              </span>
            </div>
          </div>
          <div
            style="padding-left: 4px;"
          >
            <span
              class="w-rjv-curlybraces-end"
            >
              }
            </span>
          </div>
        </div>
      </div>
      <div
        style="padding-left: 4px;"
      >
        <span
          class="w-rjv-curlybraces-end"
        >
          }
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DefaultCollapsed 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="w-json-view-container w-rjv pr-5 w-rjv-inner"
      style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
    >
      <span
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="w-rjv-arrow"
          style="transform: rotate(-90deg); transition: all 0.3s;"
        >
          <svg
            fill="var(--w-rjv-arrow-color, currentColor)"
            style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="w-rjv-curlybraces-start"
        >
          {
        </span>
        <span
          class="w-rjv-ellipsis"
          style="cursor: pointer; user-select: none;"
        >
          ...
        </span>
        <span
          class="w-rjv-curlybraces-end"
        >
          }
        </span>
        <span
          class="w-rjv-object-size"
          style="padding-left: 8px; font-style: italic;"
        >
          2 items
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > InvalidJson 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="mb-4 flex flex-col items-center rounded-lg border border-danger bg-danger-50 p-4 text-sm text-danger"
      role="alert"
    >
      <div
        class="flex w-full justify-between gap-6"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="mr-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            />
          </svg>
          <span
            class="font-medium"
          >
            Failed to parse JSON data
          </span>
        </div>
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] data-[pressed=true]:scale-[0.97] transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-danger data-[hover=true]:bg-danger/20"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            />
          </svg>
           Show Details
        </button>
      </div>
    </div>
  </div>
</div>
`;
